최신 bukkit api를 사용하기, op가 없어도 /discord 명령을 사용할 수 있게 하기